--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,10 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+    plugins {
+        id("com.android.application") version '8.13.0'
+        id("com.android.library") version '8.13.0'
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
@@ -16,3 +20,5 @@ dependencyResolutionManagement {
 rootProject.name = "rogues-and-ruins"
 include ':app'
 include ':core-intents'
+include ':rnr-mapeditor'
+include ':rnr_cinematic'
