--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,15 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
+subprojects {
+    afterEvaluate { project ->
+        if (project.plugins.hasPlugin('com.android.application') ||
+                project.plugins.hasPlugin('com.android.library')) {
+
+            project.dependencies {
+                // Aggregate artifact (core + ui + hls/dash). Safe default.
+                implementation "com.google.android.exoplayer:exoplayer:2.19.1"
+            }
+        }
+    }
+}
