--- a/core_intents/build.gradle
+++ b/core_intents/build.gradle
@@ -3,33 +3,23 @@ plugins {
 }
 
 android {
-    namespace 'com.rnr.core.intents'
+    namespace 'com.rnr.core_intents'   // pick a stable namespace
     compileSdk 34
 
     defaultConfig {
         minSdk 24
-        targetSdkVersion 34
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        targetSdk 34
+        consumerProguardFiles 'consumer-rules.pro'
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+    buildFeatures { buildConfig false } // usually just constants/models
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.7.1'
-    implementation 'com.google.android.material:material:1.13.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    // Usually none; add only what it truly needs.
+    implementation 'androidx.annotation:annotation:1.8.2'
 }
