--- a/core_intents/src/main/AndroidManifest.xml
+++ b/core_intents/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-</manifest>
+<manifest package="com.rnr.core_intents"
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
