--- a/rnr_cinematic/build.gradle
+++ b/rnr_cinematic/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
@@ -7,18 +7,18 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.newdimension.rnr_cinematic"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
-        vectorDrawables.useSupportLibrary = true
+        // Library: use consumer rules (app will supply its own proguard config)
+        consumerProguardFiles 'proguard-rules.pro'
+        vectorDrawables {
+            useSupportLibrary = true
+        }
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            // Libraries shouldn't use minify/proguardFiles here; keep empty or debug-like
         }
         debug { }
     }
@@ -28,13 +28,20 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+    buildFeatures {
+        viewBinding true
+        buildConfig true
+    }
+
     packaging {
         resources { excludes += ["META-INF/*"] }
     }
 }
 
 dependencies {
-    implementation project(":rnr_assets")
+    implementation project(':rnr_assets')
+    implementation project(':core_intents')
+
     implementation "androidx.appcompat:appcompat:1.7.0"
     implementation "com.google.android.material:material:1.12.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
