--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation project(':rnr_cinematic')
     implementation project(':rnr_assets')
     implementation project(':core_intents')
+    implementation project(':rnr_theme')
 
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.13.0'
