--- a/rnr_assets/build.gradle
+++ b/rnr_assets/build.gradle
@@ -4,28 +4,34 @@ plugins {
 
 android {
     namespace 'com.newdimension.rnr_assets'
-    compileSdk {
-        version = release(34)
-    }
+    compileSdk 34
 
     defaultConfig {
         minSdk 24
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
-    buildFeatures { buildConfig false } // no code needed
+    // This module only contributes assets (no BuildConfig needed)
+    buildFeatures { buildConfig false }
 
+    // Java toolchain aligned across modules
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    // Make sure assets are under src/main/assets/...
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets']
+            // No java/res needed here for pure assets
+        }
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.7.1'
-    implementation 'com.google.android.material:material:1.13.0'
+    // keep empty; no UI deps needed for an assets library
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
