--- a/rnr_cinematic/build.gradle
+++ b/rnr_cinematic/build.gradle
@@ -41,8 +41,8 @@ android {
 dependencies {
     implementation project(':rnr_assets')
     implementation project(':core_intents')
-
-    implementation "androidx.appcompat:appcompat:1.7.0"
-    implementation "com.google.android.material:material:1.12.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
+
