--- a/rnr_mapeditor/src/main/AndroidManifest.xml
+++ b/rnr_mapeditor/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.rnr.mapeditor"
+<manifest
     xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
